# atmos-client-c

./: Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.old  README  README.md  aclocal.m4  atmos_rest.c  atmos_rest.h  atmos_util.c  atmostest.ini.template  autogen.sh  config.h.in  configure  configure.ac  crypto.c  crypto.h  cwrapper.rc  cwrapper.sln  cwrapper.vcproj  cwrapper.vcxproj  cwrapper.vcxproj.filters  lister.c  resource.h  seatest.c  seatest.h  terawriter.c  test.c  test_object_create.c  transport.c  transport.h
atmos-c/atmos-c.xcodeproj/: project.pbxproj
include/: atmos.h  atmos_client.h  atmos_common.h  atmos_constants.h  atmos_create.h  atmos_private.h  atmos_read.h  atmos_util.h
lib/: Makefile.am  Makefile.in  atmos-c.pc.in  atmos.c  atmos.h  atmos_access_tokens.c  atmos_access_tokens.h  atmos_client.c  atmos_client.h  atmos_common.c  atmos_common.h  atmos_constants.h  atmos_create.c  atmos_create.h  atmos_private.h  atmos_read.c  atmos_read.h  atmos_service_info.c  atmos_service_info.h  atmos_update.c  atmos_update.h  atmos_util.c  atmos_util.h  atmos_versions.c  atmos_versions.h  policy.xsd  policy_no_ns.xsd  uncrustify.cfg
src/: atmos.c  atmos_client.c  atmos_common.c  atmos_create.c  atmos_read.c  atmos_util.c
test/: seatest.c  test.c  test_atmos.c
tests/: Makefile.am  Makefile.in  atmostest.ini.template  dirlist.xml  seatest.c  seatest.h  test.c  test_atmos.c  test_atmos.h  test_xmlbind.c  test_xmlbind.h
workshop/: Makefile  acl_data01.c  create01.c  delete01.c  getmeta_data01.c  meta_data01.c  meta_helpers_test.c  read01.c  sys_meta_data01.c  update01.c  updatemeta_data01.c
xmlbind/: Makefile.am  Makefile.in  bind_utils.xsl  c_impl.xsl  xmlbind.c  xmlbind.h  xmlbind_macros.h  xsd_to_c.xsl
