lib_LTLIBRARIES = libatmos.la
libatmos_la_SOURCES = atmos.c atmos_client.c atmos_common.c atmos_create.c atmos_read.c atmos_service_info.c atmos_util.c
libatmos_la_LDFLAGS = -version-info 0:0:0
libatmos_la_CFLAGS = $(XML_CFLAGS) -I$(top_srcdir)/dep/rest-client-c/lib
include_HEADERS = atmos.h atmos_client.h atmos_common.h atmos_constants.h atmos_create.h atmos_private.h atmos_read.h atmos_service_info.h atmos_util.h

